--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,63 @@
-Flask==2.2.3
-gunicorn==20.1.0
-joblib==1.1.1
-keras==2.13.1
-nltk==3.7
-numpy==1.24.2
-opencv_contrib_python==4.8.0.76
-opencv_python==4.8.0.76
-opencv_python_headless==4.7.0.72
-pandas==1.5.3
-pandastable==0.13.1
+alembic==1.11.3
+aniso8601==9.0.1
+bcrypt==4.0.1
+blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.7
+contourpy==1.1.0
+cycler==0.11.0
+dnspython==2.4.2
+email-validator==2.0.0.post2
+Flask==2.3.2
+Flask-Bcrypt==1.0.1
+Flask-Dance==7.0.0
+Flask-JWT==0.3.2
+Flask-Login==0.6.2
+Flask-Migrate==3.1.0
+Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.0.5
+Flask-WTF==1.1.1
+fonttools==4.42.0
+greenlet==2.0.2
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.3.2
+kiwisolver==1.4.4
+Mako==1.2.4
+MarkupSafe==2.1.3
+matplotlib==3.7.2
+nltk==3.8.1
+numpy==1.25.2
+nvidia-cublas-cu12==12.2.4.5
+nvidia-cuda-nvrtc-cu12==12.2.128
+nvidia-cuda-runtime-cu12==12.2.128
+nvidia-cudnn-cu12==8.9.4.25
+oauthlib==3.2.2
+packaging==23.1
+panda==0.3.1
+pandas==2.0.3
 Pillow==10.0.0
-python_Levenshtein==0.21.1
-scikit_learn==1.2.1
-spotipy==2.22.1
-tensorflow==2.13.0
+PyJWT==1.4.2
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
+regex==2023.8.8
+requests==2.31.0
+requests-oauthlib==1.3.1
+scikit-learn==1.3.0
+scipy==1.11.1
+six==1.16.0
+SQLAlchemy==2.0.20
+tensorrt==8.6.1
+tensorrt-bindings==8.6.1
+tensorrt-libs==8.6.1
+threadpoolctl==3.2.0
+tqdm==4.66.1
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==2.0.4
+URLObject==2.4.3
+Werkzeug==2.3.7
+WTForms==3.0.1
