--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,4 @@ poc/songsdetection/__pycache__/
 poc/songsdetection/__pycache__/
 poc/songsdetection/__pycache__/
 poc/spamham/__pycache__/
+app_config.py
