--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,267 @@
-alembic==1.12.0
+absl-py==1.4.0
+aiofiles==23.1.0
+aiohttp==3.8.4
+aiosignal==1.3.1
+alembic==1.11.3
+altair==4.2.2
+aniso8601==9.0.1
+anyio==3.6.2
+apturl==0.5.2
+astunparse==1.6.3
+async-timeout==4.0.2
+attrs==21.2.0
+Babel==2.8.0
+bcrypt==3.2.0
+blinker==1.6.2
+blis==0.7.10
+Brlapi==0.8.3
+cachetools==5.3.1
+catalogue==2.0.9
+certifi==2023.7.22
+chardet==4.0.0
+charset-normalizer==3.2.0
 click==8.1.7
+cmake==3.27.5
+colorama==0.4.4
+command-not-found==0.3
+confection==0.1.3
+contourpy==1.0.7
+cryptography==3.4.8
+cupshelpers==1.0
+cycler==0.11.0
+cymem==2.0.8
+dataclasses-json==0.5.7
+dbus-python==1.2.18
+decorator==4.4.2
+defer==1.0.6
+distro==1.7.0
+distro-info===1.1build1
+dnspython==2.4.2
+duplicity==0.8.21
+email-validator==2.0.0.post2
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl#sha256=83276fc78a70045627144786b52e1f2728ad5e29e5e43916ec37ea9c26a11212
+entrypoints==0.4
+facenet-pytorch==2.5.3
+fastapi==0.95.1
+fasteners==0.14.1
 fer==22.5.1
-Flask==2.3.3
-flask_dance==7.0.0
-Flask_Login==0.6.2
-Flask_Mail==0.9.1
-Flask_Migrate==4.0.4
-Flask_RESTful==0.3.10
-flask_sqlalchemy==3.1.1
-Flask_WTF==1.1.1
+ffmpeg==1.4
+ffmpy==0.3.0
+filelock==3.12.0
+Flask==2.3.2
+Flask-Dance==7.0.0
+Flask-Login==0.6.2
+Flask-Mail==0.9.1
+Flask-Migrate==4.0.4
+Flask-MySQLdb==1.0.1
+Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.0.5
+Flask-Toastr==0.5.8
+Flask-WTF==1.1.1
+flatbuffers==23.5.26
+fonttools==4.39.3
+frozenlist==1.3.3
+fsspec==2023.4.0
+future==0.18.2
+gast==0.4.0
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+gpt-index==0.4.24
+gradio==3.27.0
+gradio_client==0.1.3
+greenlet==2.0.2
+grpcio==1.57.0
+gunicorn==20.1.0
+h11==0.14.0
+h5py==3.9.0
+httpcore==0.17.0
+httplib2==0.20.2
+httpx==0.24.0
+huggingface-hub==0.17.1
+idna==3.4
+imageio==2.31.3
+imageio-ffmpeg==0.4.9
+importlib-metadata==4.6.4
+install==1.3.5
+itsdangerous==2.1.2
+jeepney==0.7.1
 Jinja2==3.1.2
 joblib==1.1.1
+jsonschema==3.2.0
 keras==2.13.1
+keyring==23.5.0
+kiwisolver==1.4.4
+langchain==0.0.144
+langcodes==3.3.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+Levenshtein==0.21.1
+libclang==16.0.6
+lightgbm==4.0.0
+linkify-it-py==2.0.0
+lit==16.0.6
+llvmlite==0.40.1
+lockfile==0.12.2
+louis==3.20.0
+macaroonbakery==1.3.1
+Mako==1.2.4
+Markdown==3.4.4
+markdown-it-py==2.2.0
+MarkupSafe==2.1.3
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
 matplotlib==3.7.0
+mdit-py-plugins==0.3.3
+mdurl==0.1.2
+monotonic==1.6
+more-itertools==8.10.0
+moviepy==1.0.3
+mpmath==1.3.0
+multidict==6.0.4
+murmurhash==1.0.10
+mypy-extensions==1.0.0
+mysql-connector-python==8.1.0
+mysqlclient==2.2.0
+netifaces==0.11.0
+networkx==3.1
+nftables==0.1
 nltk==3.7
+numba==0.57.1
+numexpr==2.8.4
 numpy==1.23.5
-opencv_contrib_python==4.8.0.76
-opencv_python==4.8.0.76
-opencv_python_headless==4.7.0.72
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+oauthlib==3.2.0
+olefile==0.46
+openai==0.27.4
+openai-whisper @ git+https://github.com/openai/whisper.git@e8622f9afc4eba139bf796c210f5c01081000472
+openapi-schema-pydantic==1.2.4
+opencv-contrib-python==4.8.0.76
+opencv-python==4.8.0.76
+opencv-python-headless==4.7.0.72
+opt-einsum==3.3.0
+orjson==3.8.10
+packaging==23.1
 pandas==1.5.3
 pandastable==0.13.1
+paramiko==2.9.3
+pathy==0.10.2
 pdfkit==1.0.0
+pexpect==4.8.0
 Pillow==9.4.0
-Pillow==10.0.1
 plotly==5.9.0
-python_Levenshtein==0.21.1
-python_Levenshtein==0.21.1
-Requests==2.31.0
+preshed==3.0.9
+proglog==0.1.10
+protobuf==4.21.12
+ptyprocess==0.7.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycairo==1.20.1
+pycryptodome==3.17
+pycups==2.0.1
+pydantic==1.10.7
+pydub==0.25.1
+pyga==2.6.2
+pygal==3.0.0
+PyGObject==3.42.1
+pyinotify==0.9.6
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyMySQL==1.1.0
+PyNaCl==1.5.0
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+PyPDF2==3.0.1
+pyRFC3339==1.1
+pyrsistent==0.18.1
+python-apt==2.4.0
+python-dateutil==2.8.2
+python-debian===0.1.43ubuntu1
+python-Levenshtein==0.21.1
+python-multipart==0.0.6
+pytz==2022.1
+pyxdg==0.27
+PyYAML==5.4.1
+rapidfuzz==3.2.0
+redis==5.0.0
+regex==2023.3.23
+reportlab==3.6.8
+requests==2.31.0
+requests-oauthlib==1.3.1
 retrying==1.3.4
+rsa==4.9
+safetensors==0.3.3
+scikit-learn==1.2.1
+scipy==1.11.2
+SecretStorage==3.3.1
+semantic-version==2.10.0
+simplejson==3.17.6
+six==1.16.0
+smart-open==6.4.0
+sniffio==1.3.0
 spacy==3.6.1
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 spotipy==2.22.1
-SQLAlchemy==2.0.19
+SQLAlchemy==2.0.20
+srsly==2.4.7
+ssh-import-id==5.11
+starlette==0.26.1
+stripe==6.0.0
+sympy==1.12
+systemd-python==234
+tenacity==8.2.2
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
 tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-io-gcs-filesystem==0.33.0
+termcolor==2.3.0
+thinc==8.1.12
+threadpoolctl==3.2.0
+tiktoken==0.3.3
+tk==0.1.0
+tokenizers==0.13.3
+toolz==0.12.0
 torch==2.0.1
+torchvision==0.15.2
+tqdm==4.65.0
 transformers==4.32.0
+triton==2.0.0
+typer==0.9.0
+typing-inspect==0.8.0
+typing_extensions==4.7.1
+tzdata==2023.3
+ubuntu-advantage-tools==27.12
+ubuntu-drivers-common==0.0.0
+uc-micro-py==1.0.1
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==2.0.4
+URLObject==2.4.3
+usb-creator==0.3.7
+uvicorn==0.21.1
+wadllib==1.3.6
+wasabi==1.1.2
+websockets==11.0.2
 Werkzeug==2.3.7
+wrapt==1.15.0
 WTForms==3.0.1
+xdg==5
+xgboost==1.7.6
+xkit==0.0.0
+xlrd==2.0.1
+yarl==1.8.2
+zipp==1.0.0
