--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 absl-py==1.4.0
-accelerate==0.22.0
+accelerate
 aiofiles==22.1.0
 aiosqlite==0.18.0
-alembic==1.12.0
+alembic
 aniso8601==9.0.1
 annotated-types==0.5.0
 anyio==3.5.0
@@ -50,7 +50,7 @@ Deprecated==1.2.14
 dlib==19.24.2
 dnspython==2.4.2
 email-validator==2.0.0.post2
-en-core-web-sm==3.6.0
+en-core-web-sm @https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl#sha256=83276fc78a70045627144786b52e1f2728ad5e29e5e43916ec37ea9c26a11212
 entrypoints==0.4
 essentia==2.1b6.dev1034
 et-xmlfile==1.1.0
@@ -63,7 +63,7 @@ fastjsonschema==2.16.2
 fer==22.5.1
 ffmpeg==1.4
 filelock==3.12.2
-flair==0.12.2
+flair
 Flask==2.3.3
 Flask-Dance==7.0.0
 Flask-Login==0.6.2
@@ -89,7 +89,7 @@ grpcio==1.56.2
 gunicorn==21.2.0
 h5py==3.9.0
 haystack==0.42
-huggingface-hub==0.16.4
+huggingface-hub
 hyperopt==0.2.7
 idna==3.4
 imageio==2.31.3
@@ -157,7 +157,7 @@ notebook==6.5.4
 notebook_shim==0.2.2
 numba==0.57.1
 numexpr==2.8.4
-numpy==1.24.0
+numpy
 nvidia-cublas-cu11==11.10.3.66
 nvidia-cuda-cupti-cu11==11.7.101
 nvidia-cuda-nvrtc-cu11==11.7.99
@@ -170,7 +170,7 @@ nvidia-cusparse-cu11==11.7.4.91
 nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
 oauthlib==3.2.2
-openai-whisper==20230918
+openai-whisper
 opencv-contrib-python==4.8.0.76
 opencv-python==4.8.0.76
 openpyxl==3.1.2
@@ -202,7 +202,7 @@ py4j==0.10.9.7
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
-pydantic_core==2.6.3
+pydantic_core
 pydub==0.25.1
 pygal==3.0.0
 Pygments==2.15.1
@@ -215,7 +215,7 @@ PySocks==1.7.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 python-ptrace==0.9.8
-pytorch_revgrad==0.2.0
+pytorch_revgrad
 pytz==2022.7
 PyYAML==6.0
 pyzmq==23.2.0
@@ -234,12 +234,11 @@ s3transfer==0.6.2
 safetensors==0.3.2
 scikit-image==0.22.0
 scikit-learn==1.3.0
-scikit-learn-intelex==20230426.111436
 scipy==1.11.1
 seaborn==0.12.2
 segtok==1.5.11
 Send2Trash==1.8.0
-sentence-transformers==2.2.2
+sentence-transformers
 sentencepiece==0.1.99
 sip==6.6.2
 six==1.16.0
@@ -247,12 +246,12 @@ smart-open==6.3.0
 sniffio==1.2.0
 soundfile==0.12.1
 soupsieve==2.4
-spacy==3.6.1
+spacy
 spacy-legacy==3.0.12
 spacy-loggers==1.0.4
 SpeechRecognition==3.10.0
 spotipy==2.23.0
-SQLAlchemy==2.0.20
+SQLAlchemy
 sqlitedict==2.1.0
 srsly==2.4.7
 stack-data==0.2.0
@@ -261,7 +260,7 @@ tabulate==0.9.0
 tenacity==8.2.2
 tensorboard==2.13.0
 tensorboard-data-server==0.7.1
-tensorflow==2.13.0
+tensorflow
 tensorflow-estimator==2.13.0
 tensorflow-io-gcs-filesystem==0.33.0
 termcolor==2.3.0
@@ -275,17 +274,17 @@ tinycss2==1.2.1
 tokenizers==0.13.3
 toml==0.10.2
 tomli==2.0.1
-torch==2.0.1
-torchaudio==2.0.2
-torchvision==0.15.2
+torch
+torchaudio
+torchvision
 tornado==6.2
 tqdm==4.65.0
 traitlets== 5.7.1
-transformer-smaller-training-vocab==0.3.1
+transformer-smaller-training-vocab
 transformers==4.33.2
 triton==2.0.0
 typer==0.9.0
-typing_extensions==4.7.1
+typing_extensions
 urllib3==1.26.16
 URLObject==2.4.3
 wasabi==1.1.2
